--- a/index.html
+++ b/index.html
@@ -320,10 +320,16 @@
         <dl class="faq">
           <dt>Is the first reveal permanent?</dt>
           <dd>The first reveal is saved on your current device for the selected species. You can reset it from the toolbar if you wish.</dd>
-          <dt>Can I save the reveal as an image?</dt>
-          <dd>Yes. Use “Save as Image”. The golden frame is included in the download.</dd>
-          <dt>Does theme affect the saved image?</dt>
-          <dd>Yes. The image captures your current theme (Dark or Light).</dd>
+          <dt>Can I use Vtomo companions for commercial or resale purposes?</dt>
+          <dd>Yes..</dd>
+          <dt>Do I need to sign up to use the Oracle website?</dt>
+          <dd>ChatGPT said:
+
+ได้เลยครับพอตเตอร์ 🙏
+นี่คือคำถาม–คำตอบสั้น ๆ เพิ่มเกี่ยวกับเว็บไซต์:
+
+Q3: Do I need to sign up to use the Oracle website?
+No. Your private Oracle link is provided after purchase — no extra sign-up required.</dd>
         </dl>
       </div>
     </section>
@@ -609,3 +615,4 @@ function onSpeciesChosen(sp){
 </script>
 </body>
 </html>
+
