--- a/index.html
+++ b/index.html
@@ -321,15 +321,9 @@
           <dt>Is the first reveal permanent?</dt>
           <dd>The first reveal is saved on your current device for the selected species. You can reset it from the toolbar if you wish.</dd>
           <dt>Can I use Vtomo companions for commercial or resale purposes?</dt>
-          <dd>Yes..</dd>
+          <dd>No. Each Vtomo companion is a digital spirit made for personal streaming use only. You are free to use them in your overlays, streams, and layouts for life — but resale, redistribution, or claiming them as your own creation is not allowed.</dd>
           <dt>Do I need to sign up to use the Oracle website?</dt>
-          <dd>ChatGPT said:
-
-ได้เลยครับพอตเตอร์ 🙏
-นี่คือคำถาม–คำตอบสั้น ๆ เพิ่มเกี่ยวกับเว็บไซต์:
-
-Q3: Do I need to sign up to use the Oracle website?
-No. Your private Oracle link is provided after purchase — no extra sign-up required.</dd>
+          <dd>No. Your private Oracle link is provided after purchase — no extra sign-up required.</dd>
         </dl>
       </div>
     </section>
@@ -615,4 +609,5 @@ function onSpeciesChosen(sp){
 </script>
 </body>
 </html>
+
 
